# BMtoBMPCpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: make_release.sh  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
include/: bitmap_image.hpp  converter.hpp  utils.hpp
src/: bitmap_image.cpp  converter.cpp  main.cpp  utils.cpp
